--- a/client/package.json
+++ b/client/package.json
@@ -17,11 +17,15 @@
     "@reduxjs/toolkit": "^2.0.1",
     "dotenv": "^16.3.1",
     "formic": "^0.0.10",
+    "formik": "^2.4.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
+    "react-hook-form": "^7.49.0",
+    "react-hot-toast": "^2.4.1",
     "react-redux": "^9.0.2",
     "react-router-dom": "^6.20.1",
+    "redux": "^5.0.0",
     "redux-persist": "^6.0.0",
     "yup": "^1.3.2"
   },
