--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "@mui/icons-material": "^5.14.19",
     "@mui/material": "^5.14.20",
     "@reduxjs/toolkit": "^2.0.1",
+    "axios": "^1.6.2",
     "dotenv": "^16.3.1",
     "formic": "^0.0.10",
     "formik": "^2.4.5",
