--- a/server/package.json
+++ b/server/package.json
@@ -2,7 +2,9 @@
   "dependencies": {
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
+    "cloudinary": "^1.41.1",
     "cors": "^2.8.5",
+    "datauri": "^4.1.0",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "gridfs-stream": "^1.1.1",
@@ -13,6 +15,7 @@
     "morgan": "^1.10.0",
     "multer": "^1.4.4",
     "multer-gridfs-storage": "^5.0.2",
+    "multer-storage-cloudinary": "^4.0.0",
     "nodemon": "^3.0.2"
   },
   "name": "server",
