--- a/client/package.json
+++ b/client/package.json
@@ -24,10 +24,12 @@
     "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.49.0",
     "react-hot-toast": "^2.4.1",
+    "react-input-emoji": "^5.6.5",
     "react-redux": "^9.0.2",
     "react-router-dom": "^6.20.1",
     "redux": "^5.0.0",
     "redux-persist": "^6.0.0",
+    "timeago.js": "^4.0.2",
     "yup": "^1.3.2"
   },
   "devDependencies": {
