--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "@mui/material": "^5.14.20",
     "@reduxjs/toolkit": "^2.0.1",
     "axios": "^1.6.2",
+    "dayschedule-widget": "^1.1.9",
     "dotenv": "^16.3.1",
     "formic": "^0.0.10",
     "formik": "^2.4.5",
@@ -29,6 +30,7 @@
     "react-router-dom": "^6.20.1",
     "redux": "^5.0.0",
     "redux-persist": "^6.0.0",
+    "socket.io-client": "^4.7.4",
     "timeago.js": "^4.0.2",
     "yup": "^1.3.2"
   },
