--- a/server/package.json
+++ b/server/package.json
@@ -16,7 +16,8 @@
     "multer": "^1.4.4",
     "multer-gridfs-storage": "^5.0.2",
     "multer-storage-cloudinary": "^4.0.0",
-    "nodemon": "^3.0.2"
+    "nodemon": "^3.0.2",
+    "socket.io": "^4.7.4"
   },
   "name": "server",
   "version": "1.0.0",
