--- a/client/package.json
+++ b/client/package.json
@@ -14,8 +14,10 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.14.19",
     "@mui/material": "^5.14.20",
+    "@mui/x-date-pickers": "^6.19.4",
     "@reduxjs/toolkit": "^2.0.1",
     "axios": "^1.6.2",
+    "dayjs": "^1.11.10",
     "dayschedule-widget": "^1.1.9",
     "dotenv": "^16.3.1",
     "formic": "^0.0.10",
